# tauri_surrealdb_playground

./: .gitignore  errors.rs  main.rs  package-lock.json  package.json
api/: mod.rs
controllers/: project.rs
handlers/: mod.rs
models/: mod.rs  project.rs  project_handler.rs  store.rs  surreal_client.rs  types.rs
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  rustc-ice-2023-11-26T17_48_17-20232.txt  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/api/: mod.rs
src-tauri/src/models/: mod.rs  project.rs  store.rs  types.rs
